--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -3,12 +3,15 @@
   <link rel="stylesheet" href="/static/css/add_blog.css" />
 </head>
 
-<div class="container">
-  <a href="{% url 'see_blog' %}">View </a>
+<div class="container mt-5">
+  <a href="{% url 'see_blog' %}"
+    ><button class="btn btn-success mt-3">View My Blogs</button></a
+  >
+
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="row">
-      <div class="col-md-12 mt-4">
+      <div class="col-md-12 mt-5">
         <label for="id_title">Enter blog title:</label>
         <input
           type="text"
