--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %} {% block body %}
-
 <section>
   <div class="container">
-    <div class="row"></div>
-    <div class="row"></div>
     <div class="row">
       <div class="col-xl-8 col-lg-10 mx-auto">
-        <div class="text-content">{{blog_obj.content}}</div>
+        <h2>{{ blog_obj.title }}</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-8 col-lg-10 mx-auto">
+        <div class="text-content">{{ blog_obj.content }}</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-8 col-lg-10 mx-auto">
+        <img src="{{ blog_obj.image }}" alt="Blog Image" />
       </div>
     </div>
   </div>
