--- a/templates/home.html
+++ b/templates/home.html
@@ -74,7 +74,7 @@
           <a href="{% url 'blog_detail' blog.title %}"
             ><img
               class="img-fluid card-img-top"
-              src="/media/{{blog.image}}"
+              src="/static/images/{{blog.image}}"
               alt="..."
           /></a>
           <div class="card-body">
@@ -92,7 +92,9 @@
             <p class="my-2 text-muted text-sm">
               Pellentesque habitant morbi tristique senectus.
             </p>
-            <a class="btn btn-link pl-0" href="post.html"
+            <a
+              class="btn btn-link pl-0"
+              href="{% url 'blog_detail' blog.title %}"
               >Read more<i class="fa fa-long-arrow-alt-right ml-2"></i
             ></a>
           </div>
