--- a/templates/update_blog.html
+++ b/templates/update_blog.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block start %}
+{% extends "base.html" %} {% block body %}
 
 <div class="container mt-5">
   <a href="{% url 'see_blog' %}" class="btn btn-warning">View Your blogs</a>
