--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
           </li>
           {% else %}
           <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-            <a class="btn btn-primary" href="user-add-0.html">Login</a>
+            <a class="btn btn-primary" href="{% url 'login_view' %}">Login</a>
           </li>
           {% endif %}
         </ul>
