updated add_blog and view_blog page

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
       href="/static/css/default.css"
       id="theme-stylesheet"
     />
+    <link rel="stylesheet" href="/static/css/add_blog.css" />
     <script src="/static/js/main.js"></script>
   </head>
   <body>
