--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
         <ul class="navbar-nav ml-auto">
           {% if request.user.is_authenticated %}
           <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-            <a class="btn btn-primary" href="user-add-0.html">Add Blog</a>
+            <a class="btn btn-primary" href="{% url 'add_blog' %}">Add Blog</a>
           </li>
           <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
             <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
