--- a/templates/see_blogs.html
+++ b/templates/see_blogs.html
@@ -8,6 +8,7 @@
           <th scope="col">#</th>
           <th scope="col">Blog Title</th>
           <th scope="col">Created At</th>
+          <th scope="col">Updated At</th>
           <th scope="col">Action</th>
         </tr>
       </thead>
@@ -17,6 +18,7 @@
           <th scope="row">{{forloop.counter}}</th>
           <td>{{blog.title}}</td>
           <td>{{blog.created_at}}</td>
+          <td>{{blog.updated_at}}</td>
           <td>
             <a href="{% url 'blog_update' blog.title %}" class="btn btn-success"
               >Update</a
