--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
             <a class="btn btn-primary" href="{% url 'add_blog' %}">Add Blog</a>
           </li>
           <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-            <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
+            <a class="btn btn-danger" href="{% url 'logout_view' %}">Logout</a>
           </li>
           {% else %}
           <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
